tests/diagnostics/type_param_builtin.kal
# A type parameter must not be named like a built-in type.
fn weird<i64>(a: i64) -> i64 = a;
